2011-01-05  Janus Weil  <janus@gcc.gnu.org>

PR fortran/47024
	* trans-decl.c (gfc_trans_deferred_vars): Initialize the _vpr component
	of polymorphic allocatables according to their declared type.


2011-01-05  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/47024
	* gfortran.dg/storage_size_3.f08: New.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@168505 138bc75d-0d04-0410-961f-82ee72b054a4